# cloud-platform-apiserver

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release-image.yml  openapi-schema.yml
docs/: admin_manual.md  api.md  datamodels.md  developer_manual.md  pod_management.md  tips.md  user_manual.md
manifests/clash_proxy/: docker-compose.yaml
manifests/docker/: Dockerfile  docker-compose.yaml  supervisord.conf
manifests/k8s/: certificates.yaml  clusterissure.yaml  deployment.yaml  dev.pod.yaml  rbac.yaml  storageclass.yaml
scripts/: auto-deploy.sh  cleanup_pvc.sh  configure_rke2_agent.sh  configure_rke2_server.sh  download_credentials.sh  dump_openapi.py  install_base_server.sh  install_debug_server.sh  prepare_disk.sh  reset_cluster.sh  run_db_port_forward.sh  unset_default_sc.sh
scripts/stress_test/: login.lua  rbac.lua  start_login_test.sh  start_rbac_test.sh
src/: __init__.py  __main__.py
src/apiserver/: __main__.py
src/components/: authn.py  authz.py  config.py  datamodels.py  errors.py  events.py  logging.py  resources.py  tasks.py  utils.py
src/orchestrator/: __init__.py  handlers.py  orchestrator.py
src/rbacserver/: __main__.py  adapters.py  datamodels.py  defaults.py  server.py  tasks.py
src/tools/: migration.py
tests/: test_consumer.py  test_debug_orchestrator.py  test_gpu_quota.py  test_odm.py  test_oidc.py  test_pod_edit_and_scheduling.py  test_producer.py  test_rbac.py  test_rfc1123.py  test_server.py
tests/templates/: default-gpu.yaml  default.yaml
(+173 files in other folders)
